--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "UI5 TypeScript MSTT",
     "scripts": {
-        "start": "ui5 serve -o index.html",
+        "start": "ui5 serve -o test/mockServer.html",
         "build": "ui5 build --all --clean-dest",
         "serve-dist": "ws --compress -d dist --open"
     },
