--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
         "ui5-middleware-serveframework": "^3.5.0",
         "ui5-middleware-simpleproxy": "^3.4.1",
         "ui5-tooling-transpile": "^3.7.5"
+    },
+    "dependencies": {
+        "@sap/ux-ui5-tooling": "^1.17.3",
+        "dotenv": "^16.5.0",
+        "fiori-tools": "^1.3.0"
     }
 }
